<resources>
    <string name="app_name">Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="table_7">Table: 7</string>
    <string name="table_8">Table: 8</string>
    <string name="table_1">Table: 1</string>
    <string name="table_2">Table: 2</string>
    <string name="table_3">Table: 3</string>
    <string name="table_4">Table: 4</string>
    <string name="table_5">Table: 5</string>
    <string name="table_6">Table: 6</string>
    <string name="title_activity_course">Course</string>
    <string name="tno">Table No.:</string>
    <string name="def">Select Your Food</string>
    <string name="price">Price</string>

    <string-array name="Menu1">
        <item>@string/def</item>
        <item>Starter1:</item>
        <item>Starter2:</item>
        <item>Starter3:</item>
        <item>Starter4:</item>
    </string-array>

    <string-array name="Menu2">
        <item>@string/def</item>
        <item>Main1:</item>
        <item>Main2:</item>
        <item>Main3:</item>
        <item>Main4:</item>
    </string-array>

    <string-array name="Menu3">
        <item>@string/def</item>
        <item>Dessert1:</item>
        <item>Dessert2:</item>
        <item>Dessert3:</item>
        <item>Dessert4:</item>
    </string-array>

    <string-array name="qty">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="qty2">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
    </string-array>

    <string-array name="cities">
        <item>Select Your City</item>
        <item>Restaurant1</item>
        <item>Restaurant2</item>
        <item>Restaurant3</item>
        <item>Restaurant4</item>
        <item>Restaurant5</item>
    </string-array>

    <string-array name="prof">
        <item>Name\t:</item>
        <item>Email\t:</item>
        <item>Password\t:</item>
        <item>Phone No\t:</item>
        <item>Gender\t:</item>
        <item>Date of Birth\t:</item>
        <item>Restaurant\t:</item>
    </string-array>

    <string name="title_activity_login">Sign in</string>
    <string name="lol">********</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="not_registered">Not Registered?</string>
    <string name="sign_up">Sign up</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="price2">Price:</string>
    <string name="confirm">Confirm</string>
    <string name="sign_up2">SIGN UP</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone_no">Phone No.:</string>
    <string name="password2">Password:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="select_gender">Select Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="restaurant">Restaurant:</string>
    <string name="sign_up3">Sign Up</string>
    <string name="manager">Manager</string>
    <string name="update_price">UPDATE PRICE</string>
    <string name="starter">Starter:</string>
    <string name="textview">TextView</string>
    <string name="main">Main:</string>
    <string name="dessert">Dessert:</string>
    <string name="update2">Update</string>
    <string name="table_9">Table: 9</string>
    <string name="table_10">Table: 10</string>
    <string name="time">Time:</string>
    <string name="enter_time">Enter Time</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non - Veg</string>
    <string name="starter2">Starter:</string>
    <string name="main2">Main:</string>
    <string name="dessert2">Dessert:</string>
    <string name="book">BOOK</string>
    <string name="menu">MENU</string>
    <string name="starter3">Starter:</string>
    <string name="item">Item:</string>
    <string name="main3">Main:</string>
    <string name="dessert3">Dessert:</string>
    <string name="update3">Update</string>
    <string name="employee">Employee</string>
    <string name="abc_restaurant">ABC Restaurant</string>
    <string name="table_91">Table: 9</string>
    <string name="table_101">Table: 10</string>
    <string name="time2">Time:</string>
    <string name="enter_time2">Enter Time</string>
    <string name="veg4">Veg</string>
    <string name="non_veg5">Non - Veg</string>
    <string name="starter4">Starter:</string>
    <string name="main4">Main:</string>
    <string name="dessert4">Dessert:</string>
    <string name="book2">BOOK</string>
    <string name="total_sales">Total Sales</string>
    <string name="main_course">Main Course:</string>
    <string name="deluxe_course">Deluxe Course:</string>
    <string name="luxury_course">Luxury Course:</string>
    <string name="total">Total:</string>
    <string name="rs_0">Rs. 0</string>
    <string name="time5">Time:</string>
    <string name="enter_time4">Enter Time</string>
    <string name="veg47">Veg</string>
    <string name="non_veg44">Non - Veg</string>
    <string name="starter44">Starter:</string>
    <string name="main44">Main:</string>
    <string name="dessert44">Dessert:</string>
    <string name="book55">BOOK</string>
    <string name="c"><![CDATA[&#169Shivam]]></string>
    <string name="info">Info</string>
    <string name="log_out_exit"><![CDATA[Log out & Exit]]></string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="pre_book">Pre-Book</string>
    <string name="monitor_sale">Monitor Sale</string>
    <string name="update55">Update</string>
    <string name="menu2">Menu</string>
    <string name="prices_and_taxes">Prices and Taxes</string>
    <string name="contact_us">Contact Us</string>
    <string name="mail_us">Mail Us</string>
    <string name="locate_us">Locate Us</string>
</resources>
