<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.NoActionBar"
    tools:context="com.sample.manager.SignUp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/back"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#8a000000"
                android:contentDescription="@string/login" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up2"
                android:textColor="#9bffffff"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="#c7c7c7"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:textColor="#ffffff"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="#c7c7c7"
                android:layout_gravity="center"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="#c7c7c7"
                android:layout_gravity="center"
                android:inputType="number"
                android:hint="@string/phone_no"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:hint="@string/password2"
                android:textColor="#ffffff"
                android:inputType="textPassword"
                android:textColorHint="#c7c7c7" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="#c7c7c7"
                android:focusable="false"
                android:onClick="test"
                android:hint="@string/date_of_birth"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#e0ffffff"
                android:layout_marginTop="15dp"
                android:text="@string/select_gender" />

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#ffffff"
                    android:text="@string/male" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textColor="#ffffff"
                    android:layout_weight="0.82" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#e5ffffff"
                android:layout_marginTop="15dp"
                android:text="@string/restaurant" />

            <Spinner
                android:id="@+id/spinner2"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:entries="@array/cities"
                android:popupBackground="#c1000000"/>

            <Button
                android:id="@+id/button"
                android:layout_width="189dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:background="@drawable/buttonshae"
                android:onClick="onBtnClicked2"
                android:text="@string/sign_up3"
                android:textColor="#d5d5d5"
                android:textSize="20sp" />

        </LinearLayout>
</ScrollView>
