<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.sample.manager.Login">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#95000000"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/appbar_scrolling_view_behavior" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_id"
        android:textColor="#ffffff"
        android:textColorHint="#c7c7c7"
        android:layout_above="@+id/editText4"
        android:layout_toEndOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:hint="@string/password"
        android:textColorHint="#c7c7c7"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#ffffff"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/imageView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/buttonshae"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignEnd="@+id/editText4"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_alignStart="@+id/editText4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_black_24dp"
        android:padding="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="44dp"
        android:layout_alignBottom="@+id/editText6"
        android:contentDescription="@string/appbar_scrolling_view_behavior" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/ic_vpn_key_black_24dp"
        android:layout_marginEnd="16dp"
        android:layout_alignTop="@+id/editText4"
        android:layout_alignStart="@+id/imageView"
        android:contentDescription="@string/title_activity_course" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button3"
        android:layout_below="@+id/button3"
        android:textColor="#e0e0e0"
        android:text="@string/remember_me"
        android:textColorHighlight="@color/colorAccent1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/not_registered"
        android:textColor="#e0e0e0"
        android:layout_marginBottom="49dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/imageView" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/sign_up"
        android:textSize="17sp"
        android:textColor="#005fff" />



</RelativeLayout>
