<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/total_sales"
        android:gravity="center"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/main_course"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginStart="40dp"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deluxe_course"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_below="@+id/textView15"
        android:layout_alignStart="@+id/textView15"
        android:layout_marginTop="45dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luxury_course"
        android:textSize="20sp"
        android:layout_marginTop="45dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_below="@+id/textView16"
        android:layout_alignStart="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/total"
        android:textSize="20sp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs_0"
        android:textSize="20sp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_above="@+id/textView16"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs_0"
        android:textSize="20sp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignStart="@+id/textView19"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs_0"
        android:gravity="center"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_above="@+id/textView18"
        android:layout_alignStart="@+id/textView20"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rs_0"
        android:gravity="center"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textView18"
        android:layout_centerHorizontal="true" />
</RelativeLayout>